# OSSS

./: -o  .coveragerc  .dockerignore  .env  .env.apikey  .env.example  .gitattributes  .gitignore  .gitmodules  =0.20  Makefile  OSSS-client-scopes.json  OSSS-clients.json  OSSS-group-role-mappings.json  OSSS-groups.json  OSSS-realm.json  OSSS-roles.json  OSSS-users-0.json  RBAC.json  RBAC_positions_and_table_access.json  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  build_realm.py  build_realm.py.bak  build_split_realm.py  check_schema_coverage.py  coverage.xml  demo.tape  docker-compose.ollama-hostnet.yml  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.bak2  docker-compose.yml.bak3  env.example  filebeat.docker.yml  filebeat.setup.yml  gunicorn.conf.py  health.py  junk.sh  (+21 more)
.github/workflows/: docs.yml  pages.yaml  pages.yml  publish.yml  testing.yaml
MetaGPT_workspace/logs/: conversation_20251118-013208.json
additional_llm_data/: bias_framework.md
additional_llm_data/dcg_staff/: dcg_staff_and_employees.csv
alembic/: 0001_create_states.py  env.py
alembic/versions/: 0004_add_cic_tables.py  0007_populate_schools_table.py  0012_add_year_to_fiscal_years.py
apps/school-board-management/: .env  .env.example  README.md  podman-compose.yml
apps/school-board-management/backend/: Containerfile  pyproject.toml
apps/school-board-management/backend/alembic/: env.py
apps/school-board-management/backend/alembic/versions/: 20250810_0001_init.py
apps/school-board-management/backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
apps/school-board-management/backend/app/routers/: meetings.py  policies.py
apps/school-board-management/backend/app/utils/: diff.py
backend/fastapi-backend/: .env.example  .gitignore  Dockerfile  README.md  README_SMOKETESTS.md  alembic.ini  cli.py  podman-compose.yml  pytest.ini  requirements-test.txt  requirements.txt  role-rules.yaml
bin.bak/: activate.csh  alembic  coverage  dotenv  ghp-import  griffe  mako-render  markdown_py  mkdocs  py.test  pyrsa-decrypt  pyrsa-keygen  pyrsa-sign  wheel
config_files/: README.md
config_files/airflow/: webserver_config.py
config_files/consul/: init-jwt.sh
config_files/consul_data/: checkpoint-signature  node-id  server_metadata.json
config_files/elastic/: elasticsearch.yml  kibana.yml
config_files/filebeat/: elastic_start.sh  filebeat.podman.yml  filebeat.setup.yml  mint_apikey.sh  setup.sh  start-filebeat.sh
config_files/openmetadata/: openmetadata.yaml
config_files/superset/: superset_config.py
consul/config/: 00-general.hcl  12-kc-postgres.json  15-keycloak.json  16-elasticsearch.json
data_model/: README.md  annnotate_models.py  export_dbml_local.py  extract_table_names_from_dbml_file.py  generate_data_query_schema.py  generate_query_metadata.py  generate_schemas_from_dbml.py  generate_wizard_configs.py  index_schema_doc.py  osss_schema (2).dbml  osss_schema (3).dbml  osss_schema.dbml  osss_schema.dot  parse_dbml.py  render_schema_doc.py  schema.dbml  schema.index.jsonl  schema.json  schema_doc.md  sis_schema.dbml  tables_missing_csv_data.py  tables_without_foreign_keys.py
docker/: README.md  logging.json  logging.yml
docs/: CONTRIBUTING.md  RELEASE_NOTES.md  architecture.md  faq.md  functions.md  getting-started.md  index.md
documentation/: 404.html  index.html  mkdocs.yaml  objects.inv  sitemap.xml
elastic/: elasticsearch.yml  kibana.yml
es-shared/: README.md
include/: README.md
k8s/: README.md  kustomization.yaml  namespace.yaml  osss.yaml
logs/: 20251117.txt  20251121.txt
metagpt/: README.md
rasa/: .bash_history  README_RASA.md  config.yml  credentials.yml  domain.yml  tester.html
redis_setup/: redis.conf  users.acl
scripts/: README.md  app-entrypoint.sh  build_dcg_staff_csv.py  check_rag_embeddings.py  debug_router_agent.py  deploy-profile.sh  destroy-profile.sh  get_districts.py  get_pdf_text.py  import-groups.sh  index_additional_llm_data_with_ollama.py  init-and-start.sh  init-and-start.sh.bak  init-osss.sh  init-tutor.sql  iowa_district_codes.csv  iowa_district_codes.txt  kc-import.sh  kc-init-and-start.sh  kc-verify.sh  keycloak_healthcheck.sh  random_school_questions_and_answers_parent_to_school.sh  random_school_questions_and_answers_principal_to_teacher.sh  random_school_questions_and_answers_school_board_to_superintendent.sh  random_school_questions_and_answers_superintendent_to_financial_manager.sh  random_school_questions_and_answers_superintendent_to_principal.sh  random_school_questions_and_answers_teacher_to_principal.sh  reformat_csv_data.py  run-filebeat.sh  seed-vault.sh  test_ollama_rag.py  test_pdf_chunk.py  train_intent_classifier.py  train_intent_domain_topic_classifier.py  training_data2.json  vault-oidc-setup.sh  wait-for-db.sh
src/: README.md
tests/: .env  __init__.py  app.py  conftest.py  coverage.xml  get_endpoint_json.sh  openid-configuration  pytest.ini  start_infra.sh  stop_infra.sh  test_functional.py  test_integration.py
tooling/: README.md  add_rbac_permissions.py  add_timestamps_to_models.py  create_pm_generator_csv.py  department_data_ownership.json  department_position_map.csv  departments.csv  departments_positions.json  docker-logs-menu.sh  export_openapi.py  extract_all_tables.py  extract_departments.py  extract_departments_and_positions.py  extract_positions.py  extract_positions_and_permissions.py  extract_positions_and_read_permissions.py  extract_unique_units.py  extract_units.py  find_running_apps.sh  generate_ai_index.py  generate_all_docs.py  generate_data_views.py  generate_docker_compose_docs.py  generate_docs.py  generate_openapi_export.py  generate_openapi_page.py  list_assignments.py  list_course_sections.py  list_courses.py  list_document_versions.py  list_empty_tables.py  list_fastapi_endpoints.py  list_files.py  list_non_empty_tables.py  list_pm_work_generators.py  list_users.py  list_work_order_parts.py  list_work_order_time_logs.py  list_work_orders.py  openapi.json  (+15 more)
tools/: generate_query_data_langchain_agents.py
workflows/: testing.yaml
zulip/: README.md
(+6568 files in other folders)
