[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-schools"
version = "0.0.0.dev2"  # static to avoid dynamic import during build
description = "Open Source School Software(OSSS)"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }  # SPDX, avoids the classifier warning
keywords = ["Keycloak", "FastAPI", "Authentication", "Authorization", "School"]

authors = [
    { name = "Will Rubel", email = "will.rubel@gmail.com" }
]
maintainers = [
    { name = "Will Rubel", email = "will.rubel@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["readme"]

dependencies = [
    # Core async / web
    "anyio>=3.4.0",
    "asgiref>=3.4.1",
    "h11>=0.12.0",
    "sniffio>=1.2.0",
    "typing_extensions>=4.0.1",

    # HTTP / crypto / auth
    "certifi>=2023.7.22",
    "charset-normalizer>=2.0.9",
    "click>=8.0.3",
    "ecdsa>=0.17.0",
    "idna>=3.3",
    "pyasn1>=0.4.8",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.31.0",
    "rsa>=4.8",
    "six>=1.16.0",
    "urllib3>=1.26.0",
    "itsdangerous>=2.0.1",
    "cryptography>=41.0.0",
    "PyJWT>=2.8,<3",

    # FastAPI stack
    "fastapi>=0.110.0",
    "uvicorn>=0.22",

    # Settings / env
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.0",

    # DB / migrations
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.30.0",

    # Caching / storage
    "fastapi-cache2>=0.2.1",
    "redis>=5.0.0",

    # Observability / testing
    "prometheus-client>=0.20",
    "httpretty>=1.1.4",
    "python-json-logger>=3.3.0",

    # Request parsing / uploads
    "python-multipart>=0.0.9",

    # CLI / utilities
    "typer>=0.9.0,<0.10.0",
    "httpx>=0.27",
    "rich>=13.7",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",

    # Keycloak / Consul
    "python-keycloak-client>=0.2.3",
    "python-consul2>=0.1.5",

    # Misc
    "packaging>=23.0",

    "langchain-core>=0.3.72,<0.4",
    "langchain==0.3.27",
    "langchain-openai>=0.2",
    "langgraph>=0.2",

]

[project.optional-dependencies]
server = [
    "gunicorn>=21.2",
]

dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "markdown-include>=0.8.1",
    "pytest-asyncio>=0.20",
    "fastapi_keycloak>=1.1.0",
    "pytest-dotenv>=0.5.2",
    "attrs>=25.3.0",
    "outcome>=1.3.0.post0",
    "sortedcontainers>=2.4.0",
    "trio>=0.30.0",
    "python-consul2>=0.1.5",
    "pdfplumber==0.11.8",
    "pytesseract==0.3.13",
    # NOTE: Rasa kept out of main env due to SQLAlchemy<1.5 pin
    # Install Rasa in its own venv instead.
]

ai = [
    "openai>=1.39",
    "guardrails-ai>=0.2.3",
    "chromadb>=0.5.5",
    "pypdf>=4.0.0",


]

[project.urls]
documentation = "https://osss.com/"
repository = "https://github.com/rubelw/OSSS"
issues = "https://github.com/rubelw/OSSS/issues"

# ---- Setuptools config ----
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["OSSS*"]
exclude = ["tests*", "apps*", "examples*", "scripts*", "alembic*"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.package-data]
"osss_cli" = ["assets/*.json"]

[tool.setuptools.exclude-package-data]
"osss_cli" = ["__pycache__"]

[project.scripts]
osss = "OSSS.cli:cli"